// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkThemeToggle should render correctly 1`] = `
<button
  className="bpk-link"
  onClick={[Function]}
  title="Keyboard Shortcut: ctrl + cmd + t"
  type="button"
>
  Switch Theme to 
  custom
</button>
`;

exports[`BpkThemeToggle should render correctly when clicked 1`] = `
<button
  className="bpk-link"
  onClick={[Function]}
  title="Keyboard Shortcut: ctrl + cmd + t"
  type="button"
>
  Switch Theme to 
  Skyscanner
</button>
`;
